--- a/2_IDMapper.ipynb
+++ b/2_IDMapper.ipynb
@@ -25,7 +25,6 @@
    ],
    "source": [
     "from pyopenms import *\n",
-    "import pyopenms as pms\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -34,8 +33,7 @@
     "\n",
     "print(os.getcwd())\n",
     "    \n",
-    "# here was a typo alinged vs aligner, strange extension xml instead of featureXML\n",
-    "input_feature_files = sorted(glob.glob('results/consensus/interim/MapAligner*featureXML*'))\n",
+    "input_feature_files = sorted(glob.glob(\"results/GNPSexport/interim/MapAligned*.featureXML\"))\n",
     "print(input_feature_files)\n",
     "\n",
     "feature_maps = []\n",
@@ -49,9 +47,9 @@
     "protein_ids = []\n",
     "peptide_ids= []\n",
     "\n",
-    "mapper = pms.IDMapper()\n",
+    "mapper = IDMapper()\n",
     "\n",
-    "input_mzml_files= sorted(glob.glob(\"results/interim/*.mzML\"))\n",
+    "input_mzml_files= sorted(glob.glob(\"results/interim/PCpeak_*.mzML\"))\n",
     "print(input_mzml_files)\n",
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
@@ -64,16 +62,9 @@
     "            \n",
     "            mapper.annotate(fmap, peptide_ids, protein_ids, use_centroid_rt, use_centroid_mz, exp)\n",
     "            print(fmap.getMetaValue('spectra_data')[0].decode())\n",
-    "        featureidx_file = os.path.join(\"results\", \"\", \"consensus\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[19:-5] +\".featureXML\")\n",
+    "        featureidx_file = os.path.join(\"results\", \"\", \"GNPSexport\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[7:-5] +\".featureXML\")\n",
     "        FeatureXMLFile().store(featureidx_file, fmap)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
