--- a/3_FeatureGroupingAlgorithmKD.ipynb
+++ b/3_FeatureGroupingAlgorithmKD.ipynb
@@ -167,7 +167,7 @@
     "consensus_map = ConsensusMapDF()\n",
     "file_descriptions = consensus_map.getColumnHeaders()\n",
     "\n",
-    "input_feature_files = sorted(glob.glob('results/consensus/interim/IDMapper*.featureXML'))\n",
+    "input_feature_files = sorted(glob.glob('results/GNPSexport/interim/IDMapper*.featureXML'))\n",
     "print(input_feature_files)\n",
     "\n",
     "feature_maps = []\n",
@@ -190,7 +190,7 @@
     "consensus_map.setColumnHeaders(file_descriptions)\n",
     "\n",
     "\n",
-    "Consensus_file= os.path.join(\"results\", \"\", \"consensus\", \"\",\"interim\", \"\", 'consensus' + \".consensusXML\")\n",
+    "Consensus_file= os.path.join(\"results\", \"\", \"GNPSexport\", \"\",\"interim\", \"\", 'consensus' + \".consensusXML\")\n",
     "ConsensusXMLFile().store(Consensus_file, consensus_map)\n",
     "\n",
     "\n",
@@ -207,7 +207,7 @@
     "result.reset_index(drop=True, inplace=True)\n",
     "\n",
     "# store as tsv file\n",
-    "result.to_csv('results/consensus/Consensus.tsv', sep = '\\t', index = False)"
+    "result.to_csv('results/GNPSexport/interim/Consensus.tsv', sep = '\\t', index = False)"
    ]
   }
  ],
