--- a/6_TextExporter.ipynb
+++ b/6_TextExporter.ipynb
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "input_consensus= \"results/consensus/filtered.consensusXML\"\n",
+    "input_consensus= \"results/GNPSexport/interim/filtered.consensusXML\"\n",
     "cmap = ConsensusMap()\n",
     "ConsensusXMLFile().load(input_consensus, cmap)\n",
     "new_map= ConsensusMap(cmap)\n",
@@ -148,7 +148,7 @@
     "    if f.getPeptideIdentifications() !=[]:\n",
     "        new_map.push_back(f)\n",
     "        \n",
-    "Consensus_file= os.path.join(\"results\", \"\", \"consensus\", \"\", 'filtered_pyopenms' + \".consensusXML\")\n",
+    "Consensus_file= os.path.join(\"results\", \"\", \"GNPSexport\", \"\", \"interim\", \"\",'filtered_pyopenms' + \".consensusXML\")\n",
     "ConsensusXMLFile().store(Consensus_file, new_map)\n",
     "\n",
     "file_descriptions = new_map.getColumnHeaders()\n",
@@ -171,7 +171,7 @@
     "    result.reset_index(drop=True, inplace=True)\n",
     "\n",
     "    # store as tsv file\n",
-    "    result.to_csv('results/consensus/FeatureQuantificationTable.txt', sep = '\\t', index = False)"
+    "    result.to_csv('results/GNPSexport/FeatureQuantificationTable.txt', sep = '\\t', index = False)"
    ]
   },
   {
