--- a/7_Requantification.ipynb
+++ b/7_Requantification.ipynb
@@ -21,7 +21,7 @@
     "import os\n",
     "import glob\n",
     "\n",
-    "input_mzml_files = sorted(glob.glob('results/interim/*.mzML'))\n",
+    "input_mzml_files = sorted(glob.glob('results/interim/PCpeak_*.mzML'))\n",
     "\n",
     "raw_data=[]\n",
     "for filename in input_mzml_files:\n",
@@ -44,7 +44,7 @@
     "    transformer.transformRetentionTimes(exp, trafo, True)\n",
     "\n",
     "for exp in raw_data:    \n",
-    "    mzml_file = os.path.join(\"results\", \"\", \"Requant\", \"\", \"interim\", \"\", 'MapAligned_' + os.path.basename(exp.getLoadedFilePath())[19:-5] +\".mzML\")\n",
+    "    mzml_file = os.path.join(\"results\", \"\", \"Requant\", \"\", \"interim\", \"\", 'MapAligned_' + os.path.basename(exp.getLoadedFilePath())[7:-5] +\".mzML\")\n",
     "    MzMLFile().store(mzml_file, exp)"
    ]
   },
@@ -5297,7 +5297,7 @@
     "            \n",
     "            mapper.annotate(fmap, peptide_ids, protein_ids, use_centroid_rt, use_centroid_mz, exp)\n",
     "            #print(fmap.getMetaValue('spectra_data')[0].decode())\n",
-    "        featureidx_file = os.path.join(\"results\", \"\", \"Requant\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[19:-5] +\".featureXML\")\n",
+    "        featureidx_file = os.path.join(\"results\", \"\", \"Requant\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[11:-5] +\".featureXML\")\n",
     "        FeatureXMLFile().store(featureidx_file, fmap)"
    ]
   },
@@ -5474,10 +5474,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Compare the preprocessed and requantified numbers of features (missing values):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Determination of memory status is not supported on this \n",
+      " platform, measuring for memoryleaks will never fail\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_blank.csv\n",
+      "Preprocessed: 1267 Requantified: 5294\n",
+      "features_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep1.csv\n",
+      "Preprocessed: 623 Requantified: 4467\n",
+      "features_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep3.csv\n",
+      "Preprocessed: 556 Requantified: 4451\n",
+      "features_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep2.csv\n",
+      "Preprocessed: 543 Requantified: 4923\n",
+      "features_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep2.csv\n",
+      "Preprocessed: 523 Requantified: 4068\n",
+      "features_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_blank.csv\n",
+      "Preprocessed: 3008 Requantified: 5045\n",
+      "features_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep3.csv\n",
+      "Preprocessed: 532 Requantified: 3807\n",
+      "features_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep1.csv\n",
+      "Preprocessed: 636 Requantified: 3936\n",
+      "features_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep3.csv\n",
+      "Preprocessed: 2436 Requantified: 6625\n",
+      "features_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep2.csv\n",
+      "Preprocessed: 2350 Requantified: 6701\n",
+      "features_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_blank.csv\n",
+      "Preprocessed: 2112 Requantified: 5012\n",
+      "features_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep1.csv\n",
+      "Preprocessed: 2144 Requantified: 6597\n"
+     ]
+    }
+   ],
    "source": [
     "from pyopenms import *\n",
     "import pandas as pd\n",
@@ -5487,16 +5533,28 @@
     "import matplotlib\n",
     "\n",
     "Preprocessed= glob.glob(\"results/features/*.csv\")\n",
-    "Requantified= glob.glob(\"results/Requant/*csv\")\n",
+    "Requantified= glob.glob(\"results/Requant/*.csv\")\n",
     "\n",
     "for table in Preprocessed:\n",
     "    df1= pd.read_csv(table)\n",
     "    feature_no= len(df1)\n",
+    "\n",
     "    for matrix in Requantified:\n",
     "        df2= pd.read_csv(matrix)\n",
     "        requant_no= len(df2)\n",
-    "        if os.path.basename(matrix)= os.path.basename(table):\n"
+    "\n",
+    "        if os.path.basename(table)== os.path.basename(matrix):\n",
+    "            print(os.path.basename(matrix))\n",
+    "            print(\"Preprocessed:\", feature_no, \"Requantified:\", requant_no)\n",
+    "   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
