--- a/4_FileFilter.ipynb
+++ b/4_FileFilter.ipynb
@@ -118,6 +118,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_consensus= \"results/GNPSexport/interim/consensus.consensusXML\"\n",
+    "cmap = ConsensusMap()\n",
+    "ConsensusXMLFile().load(input_consensus, cmap)\n",
+    "new_map= ConsensusMap(cmap)\n",
+    "new_map.clear(False)\n",
+    "for f in cmap:\n",
+    "    if f.getPeptideIdentifications() !=[]:\n",
+    "        new_map.push_back(f)\n",
+    "        \n",
+    "Consensus_file= os.path.join(\"results\", \"\", \"GNPSexport\", \"\", \"interim\", \"\",'filtered' + \".consensusXML\")\n",
+    "ConsensusXMLFile().store(Consensus_file, new_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
