--- a/6_TextExporter.ipynb
+++ b/6_TextExporter.ipynb
@@ -33,9 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1739174979.py, line 68)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/ipykernel_4133/1739174979.py\"\u001b[0;36m, line \u001b[0;32m68\u001b[0m\n\u001b[0;31m    def writeFeatureHeader()\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class FeatureQuantTable(ConsensusMap):\n",
     "    def __init__(self):\n",
