--- a/7.2_Requantification.ipynb
+++ b/7.2_Requantification.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyopenms import *\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -15,12 +28,6 @@
     }
    ],
    "source": [
-    "from pyopenms import *\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import glob\n",
-    "\n",
     "input_mzml_files = sorted(glob.glob('results/interim/PCpeak_*.mzML'))\n",
     "\n",
     "raw_data=[]\n",
@@ -72,38 +79,6 @@
     "                [float(iso_distrib) for iso_distrib in row[6].split(',')] # isotope distributions\n",
     "            ))\n",
     "    return metaboTable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import glob\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Determination of memory status is not supported on this \n",
-      " platform, measuring for memoryleaks will never fail\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "sys.path.insert(0, '/Users/eeko/openms-develop/openMS-build/pyOpenMS')\n",
-    "from pyopenms import *"
    ]
   },
   {
