--- a/1_MapAlignerPoseClustering.ipynb
+++ b/1_MapAlignerPoseClustering.ipynb
@@ -1,27 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import feature files and load them to a FeatureMap() file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "Determination of memory status is not supported on this \n",
+      " platform, measuring for memoryleaks will never fail\n"
      ]
     }
    ],
    "source": [
-    "# get in index of feature map with highest number of features in feature map list\n",
-    "from pyopenms import *\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
     "import glob\n",
-    "\n",
-    "path= \"results/consensus/interim/\"\n",
+    "from pyopenms import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= \"results/GNPSexport/interim/\"\n",
     "isExist= os.path.exists(path)\n",
     "if not isExist:\n",
     "    os.mkdir(path)\n",
@@ -31,13 +43,33 @@
     "for featurexml_file in input_feature_files:\n",
     "    fmap = FeatureMap()\n",
     "    FeatureXMLFile().load(featurexml_file, fmap)\n",
-    "    feature_maps.append(fmap)\n",
-    "    \n",
+    "    feature_maps.append(fmap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. MapAlignmentAlgorithmPoseClustering algorithm is used to align the retention time shifts caused by chromatographic differences. \n",
+    "   The reference file used for Map Alignment is the feature map with the highest number of features. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "ref_index = [i[0] for i in sorted(enumerate([fm.size() for fm in feature_maps]), key=lambda x:x[1])][-1]\n",
     "\n",
     "aligner = MapAlignmentAlgorithmPoseClustering()\n",
     "aligner_par= aligner.getDefaults()\n",
+    "\n",
     "aligner_par.setValue(\"max_num_peaks_considered\", -1)\n",
+    "aligner_par.setValue(\"superimposer:mz_pair_max_distance\", 0.05)\n",
+    "aligner_par.setValue(\"pairfinder:distance_MZ:max_difference\", 10.0)\n",
+    "aligner_par.setValue(\"pairfinder:distance_MZ:unit\", \"ppm\")\n",
     "aligner.setParameters(aligner_par)\n",
     "aligner.setReference(feature_maps[ref_index])\n",
     "\n",
@@ -48,8 +80,8 @@
     "    transformer.transformRetentionTimes(feature_map, trafo, True) # store original RT as meta value\n",
     "\n",
     "for feature_map in feature_maps:    \n",
-    "    feature_file = os.path.join(\"results\", \"\", \"consensus\", \"\", \"interim\", \"\", 'MapAligned_' + os.path.basename(feature_map.getMetaValue('spectra_data')[0].decode())[19:-5] +\".featureXML\")\n",
-    "    trafo_file= os.path.join(\"results\", \"\", \"consensus\", \"\", \"interim\", \"\", 'MapAligned_' + os.path.basename(feature_map.getMetaValue('spectra_data')[0].decode())[19:-5] +\".trafoXML\")\n",
+    "    feature_file = os.path.join(\"results\", \"\", \"GNPSexport\", \"\", \"interim\", \"\", 'MapAligned_' + os.path.basename(feature_map.getMetaValue('spectra_data')[0].decode())[7:-5] +\".featureXML\")\n",
+    "    trafo_file= os.path.join(\"results\", \"\", \"GNPSexport\", \"\", \"interim\", \"\", 'MapAligned_' + os.path.basename(feature_map.getMetaValue('spectra_data')[0].decode())[7:-5] +\".trafoXML\")\n",
     "    FeatureXMLFile().store(feature_file, feature_map)\n",
     "    TransformationXMLFile().store(trafo_file, trafo)"
    ]
