--- a/2_IDMapper.ipynb
+++ b/2_IDMapper.ipynb
@@ -1,47 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Determination of memory status is not supported on this \n",
-      " platform, measuring for memoryleaks will never fail\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics\n",
-      "[]\n",
-      "['results/interim/precursorcorrected_Epemicins.mzML', 'results/interim/precursorcorrected_GermicidinA.mzML', 'results/interim/precursorcorrected_GermicidinB.mzML']\n"
-     ]
-    }
-   ],
+   "source": [
+    "Import aligned feature files and load them to a FeatureMap() file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from pyopenms import *\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
     "import glob\n",
-    "import os\n",
-    "\n",
-    "print(os.getcwd())\n",
     "    \n",
     "input_feature_files = sorted(glob.glob(\"results/GNPSexport/interim/MapAligned*.featureXML\"))\n",
-    "print(input_feature_files)\n",
     "\n",
     "feature_maps = []\n",
     "for featurexml_file in input_feature_files:\n",
     "    fmap = FeatureMap()\n",
     "    FeatureXMLFile().load(featurexml_file, fmap)\n",
-    "    feature_maps.append(fmap)\n",
-    "\n",
+    "    feature_maps.append(fmap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. IDMapper annotates MS2 fragmentations as peptide/protein identifications. This is the only way to currently annotate MS2 data for GNPS FBMN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "use_centroid_rt= False\n",
     "use_centroid_mz= True\n",
     "protein_ids = []\n",
@@ -50,7 +47,7 @@
     "mapper = IDMapper()\n",
     "\n",
     "input_mzml_files= sorted(glob.glob(\"results/interim/PCpeak_*.mzML\"))\n",
-    "print(input_mzml_files)\n",
+    "\n",
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
     "    MzMLFile().load(filename, exp)\n",
@@ -61,7 +58,6 @@
     "            protein_ids = []\n",
     "            \n",
     "            mapper.annotate(fmap, peptide_ids, protein_ids, use_centroid_rt, use_centroid_mz, exp)\n",
-    "            print(fmap.getMetaValue('spectra_data')[0].decode())\n",
     "        featureidx_file = os.path.join(\"results\", \"\", \"GNPSexport\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[7:-5] +\".featureXML\")\n",
     "        FeatureXMLFile().store(featureidx_file, fmap)"
    ]
