--- a/4_FileFilter.ipynb
+++ b/4_FileFilter.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. GNPS FBMN requires features that have a fragmentation pattern. File-filtering will keep only the features that have peptide identifications (MS2 data)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. File-filtering is used to remove all features that do not have an MS2 spectrum."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,17 +29,22 @@
     }
    ],
    "source": [
-    "from pyopenms import *\n",
-    "import pyopenms as pms\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "from pyopenms import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ConsensusXMLFile::store():  found 7052 invalid unique ids\n"
+     ]
+    }
+   ],
    "source": [
     "input_consensus= \"results/GNPSexport/interim/consensus.consensusXML\"\n",
     "cmap = ConsensusMap()\n",
@@ -59,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
