PCA and GNPS workshop notebook

--- a/OpenMS_workflow.ipynb
+++ b/OpenMS_workflow.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9c82c0c8",
+   "metadata": {},
+   "source": [
+    "Import latest pyopenms from source:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24aa193e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, '/home/eeko/openms-develop/openms-build/pyOpenMS')\n",
+    "from pyopenms import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df65e864",
    "metadata": {},
    "source": [
