--- a/GNPSExport_workshop.ipynb
+++ b/GNPSExport_workshop.ipynb
@@ -25,7 +25,7 @@
     "import os\n",
     "import glob\n",
     "import sys\n",
-    "sys.path.insert(0, '/home/eeko/openms-develop/openms-build/pyOpenMS')\n",
+    "#sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import pandas as pd"
    ]
@@ -1534,7 +1534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(GNPSMGFFile)"
+    "GNPSMGF"
    ]
   },
   {
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,7 +2014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
