--- a/GNPSExport_workshop.ipynb
+++ b/GNPSExport_workshop.ipynb
@@ -25,7 +25,7 @@
     "import os\n",
     "import glob\n",
     "import sys\n",
-    "#sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
+    "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import pandas as pd"
    ]
