--- a/4.1_DataAnalysis.ipynb
+++ b/4.1_DataAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -52,32 +52,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>dehydroxynocardamine</td>\n",
-       "      <td>585.361</td>\n",
-       "      <td>347.7030</td>\n",
+       "      <td>585.361000</td>\n",
+       "      <td>347.70300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Massbank:PR311142 Cyclo(leucylprolyl)</td>\n",
-       "      <td>211.144</td>\n",
-       "      <td>200.4470</td>\n",
+       "      <td>211.144000</td>\n",
+       "      <td>200.44700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>cyclo(L-Val-L-Pro)</td>\n",
-       "      <td>197.129</td>\n",
-       "      <td>311.2370</td>\n",
+       "      <td>197.129000</td>\n",
+       "      <td>311.23700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>\"(4R)-4-((3R,5R,6S,7R,9S,10R,12S,13R,17R)-3,6,...</td>\n",
-       "      <td>871.554</td>\n",
-       "      <td>419.3890</td>\n",
+       "      <td>871.554000</td>\n",
+       "      <td>419.38900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Massbank:PR300821 Cyclo(proline-leucine)</td>\n",
-       "      <td>211.144</td>\n",
-       "      <td>223.9610</td>\n",
+       "      <td>211.144000</td>\n",
+       "      <td>223.96100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -86,81 +86,82 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>357121</th>\n",
-       "      <td>cyclo(L-Val-L-Pro)</td>\n",
-       "      <td>197.129</td>\n",
-       "      <td>136.0980</td>\n",
+       "      <th>356761</th>\n",
+       "      <td>Spectral Match to Tyr-Ala from NIST14</td>\n",
+       "      <td>253.118000</td>\n",
+       "      <td>76.97570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>357122</th>\n",
-       "      <td>cyclo(L-Phe-D-Pro)</td>\n",
-       "      <td>245.128</td>\n",
-       "      <td>418.9910</td>\n",
+       "      <th>357126</th>\n",
+       "      <td>epemicinA</td>\n",
+       "      <td>793.446100</td>\n",
+       "      <td>412.72450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>357123</th>\n",
-       "      <td>LUMICHROME - 70.0 eV</td>\n",
-       "      <td>243.088</td>\n",
-       "      <td>385.5800</td>\n",
+       "      <th>357127</th>\n",
+       "      <td>epemicinB</td>\n",
+       "      <td>712.420400</td>\n",
+       "      <td>405.53937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>357124</th>\n",
-       "      <td>cyclo(L-Val-L-Pro)</td>\n",
-       "      <td>197.129</td>\n",
-       "      <td>74.8607</td>\n",
+       "      <th>357128</th>\n",
+       "      <td>epemicinB, M+H</td>\n",
+       "      <td>1423.832300</td>\n",
+       "      <td>405.53937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>357125</th>\n",
-       "      <td>Spectral Match to Palmitoyl ethanolamide from ...</td>\n",
-       "      <td>300.289</td>\n",
-       "      <td>655.4500</td>\n",
+       "      <th>357130</th>\n",
+       "      <td>Desferrioxamine B</td>\n",
+       "      <td>561.361189</td>\n",
+       "      <td>322.24036</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>217891 rows × 3 columns</p>\n",
+       "<p>1525 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                            Compound_Name  Precursor_MZ  \\\n",
-       "0                                    dehydroxynocardamine       585.361   \n",
-       "2                   Massbank:PR311142 Cyclo(leucylprolyl)       211.144   \n",
-       "6                                      cyclo(L-Val-L-Pro)       197.129   \n",
-       "8       \"(4R)-4-((3R,5R,6S,7R,9S,10R,12S,13R,17R)-3,6,...       871.554   \n",
-       "9                Massbank:PR300821 Cyclo(proline-leucine)       211.144   \n",
+       "0                                    dehydroxynocardamine    585.361000   \n",
+       "2                   Massbank:PR311142 Cyclo(leucylprolyl)    211.144000   \n",
+       "6                                      cyclo(L-Val-L-Pro)    197.129000   \n",
+       "8       \"(4R)-4-((3R,5R,6S,7R,9S,10R,12S,13R,17R)-3,6,...    871.554000   \n",
+       "9                Massbank:PR300821 Cyclo(proline-leucine)    211.144000   \n",
        "...                                                   ...           ...   \n",
-       "357121                                 cyclo(L-Val-L-Pro)       197.129   \n",
-       "357122                                 cyclo(L-Phe-D-Pro)       245.128   \n",
-       "357123                               LUMICHROME - 70.0 eV       243.088   \n",
-       "357124                                 cyclo(L-Val-L-Pro)       197.129   \n",
-       "357125  Spectral Match to Palmitoyl ethanolamide from ...       300.289   \n",
+       "356761              Spectral Match to Tyr-Ala from NIST14    253.118000   \n",
+       "357126                                          epemicinA    793.446100   \n",
+       "357127                                          epemicinB    712.420400   \n",
+       "357128                                     epemicinB, M+H   1423.832300   \n",
+       "357130                                  Desferrioxamine B    561.361189   \n",
        "\n",
        "        RetentionTime  \n",
-       "0            347.7030  \n",
-       "2            200.4470  \n",
-       "6            311.2370  \n",
-       "8            419.3890  \n",
-       "9            223.9610  \n",
+       "0           347.70300  \n",
+       "2           200.44700  \n",
+       "6           311.23700  \n",
+       "8           419.38900  \n",
+       "9           223.96100  \n",
        "...               ...  \n",
-       "357121       136.0980  \n",
-       "357122       418.9910  \n",
-       "357123       385.5800  \n",
-       "357124        74.8607  \n",
-       "357125       655.4500  \n",
+       "356761       76.97570  \n",
+       "357126      412.72450  \n",
+       "357127      405.53937  \n",
+       "357128      405.53937  \n",
+       "357130      322.24036  \n",
        "\n",
-       "[217891 rows x 3 columns]"
+       "[1525 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df= pd.read_csv(\"resources/MS2_LIBRARYSEARCH_all_identifications.tsv\", sep='\\t', encoding='latin-1')\n",
+    "df= pd.read_csv(\"resources/MS2_LIBRARYSEARCH_all_identifications_cos0_7.tsv\", sep='\\t', encoding='latin-1')\n",
     "df.drop(df.index[df['IonMode'] == \"negative\"], inplace=True)\n",
     "df.drop(df.index[df['MZErrorPPM'] > 20.0], inplace=True)\n",
     "GNPS=df.drop(columns=[\"PI\", \"Adduct\", \"IonMode\", \"Organism\", \"MZErrorPPM\", \"SpecMZ\"])\n",
     "GNPS=GNPS.rename(columns= {\"RT_Query\": \"RetentionTime\"})\n",
+    "GNPS=GNPS.drop_duplicates(subset=\"Compound_Name\", keep='first')\n",
     "GNPS"
    ]
   },
