--- a/4.2_Visualisation.ipynb
+++ b/4.2_Visualisation.ipynb
@@ -293,6 +293,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Visualise the FFMIdent identifications (quite useless when you have a lot of features - aka very complex samples). Better for targeted metabolomics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import axes3d\n",
+    "\n",
+    "path= sorted(glob.glob('results/Requant/interim/*.featureXML'))\n",
+    "\n",
+    "def plotDetectedFeatures3D(filename):\n",
+    "    fm = FeatureMap()\n",
+    "    fh = FeatureXMLFile()\n",
+    "    fh.load(filename, fm)\n",
+    "\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "    for feature in fm:\n",
+    "        color = next(ax._get_lines.prop_cycler)['color']\n",
+    "        # chromatogram data is stored in the subordinates of the feature\n",
+    "        for i, sub in enumerate(feature.getSubordinates()):\n",
+    "            retention_times = [x[0] for x in sub.getConvexHulls()[0].getHullPoints()]\n",
+    "            intensities = [int(y[1]) for y in sub.getConvexHulls()[0].getHullPoints()]\n",
+    "            mz = sub.getMetaValue('MZ')\n",
+    "            ax.plot(retention_times, intensities, zs = mz, zdir = 'x', color = color)\n",
+    "            if i == 0:\n",
+    "                ax.text(mz,retention_times[0], max(intensities)*1.02, feature.getMetaValue('label'), color = color)\n",
+    "\n",
+    "    ax.set_ylabel('time (s)')\n",
+    "    ax.set_xlabel('m/z')\n",
+    "    ax.set_zlabel('intensity (cps)')\n",
+    "    plt.show()\n",
+    "    \n",
+    "for filename in path:\n",
+    "    print(filename)\n",
+    "    plotDetectedFeatures3D(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create diagnostic plots (check the frequency of the presence of a feature with histograms):"
    ]
   },
