--- a/3_Requantification.ipynb
+++ b/3_Requantification.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# `Re-quantification workflow`\n",
     "\n",
-    "This workflow consists of X steps. The purpose is missing value imputation caused by the preprocessing algorithms.\n",
+    "This workflow consists of 3 steps. The purpose is missing value imputation caused by the preprocessing algorithms.\n",
     "\n",
     "#### `1) Create a library (MetaboliteIdentification table)` \n",
     "\n",
