--- a/1_Preprocessing(SIRIUS-CSI:FingerID).ipynb
+++ b/1_Preprocessing(SIRIUS-CSI:FingerID).ipynb
@@ -31,20 +31,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64371c73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import glob\n",
-    "from pyopenms import *"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "da76ec1a",
    "metadata": {},
@@ -52,6 +38,8 @@
     "# `Preprocessing workflow`\n",
     "\n",
     "#### The preprocessing workflow consists of five steps:\n",
+    "\n",
+    "![dag](/images/1_Preprocessing+SIRIUS_CSI_FingerID.svg)\n",
     "\n",
     "#### `1) PrecursorCorrection` (To the \"highest intensity MS1 peak\")\n",
     "\n",
@@ -551,7 +539,7 @@
    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
