--- a/2_GNPSExport.ipynb
+++ b/2_GNPSExport.ipynb
@@ -34,7 +34,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `GNPSExport Workflow`"
+    "# `GNPSExport Workflow`\n",
+    "\n",
+    "![dag](/images/2_GNPSExport.svg)"
    ]
   },
   {
