--- a/1_Preprocessing.ipynb
+++ b/1_Preprocessing.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "#### The preprocessing workflow consists of nine steps:\n",
     "\n",
-    "![Preprocessing+SIRIUS_CSI_FingerID.svg](attachment:24273879-c003-48f4-8bf8-6033e16b1199.svg)"
+    "![Preprocessing+SIRIUS_CSI_FingerID.png](attachment:24273879-c003-48f4-8bf8-6033e16b1199.png)"
    ]
   },
   {
