readme and description improvements

--- a/2_SIRIUS_CSI.ipynb
+++ b/2_SIRIUS_CSI.ipynb
@@ -58,6 +58,8 @@
     "\n",
     ">Maximal computation time in seconds for a single compound. 0 for an infinite amount of time. (default: '100' min: '0')\n",
     "\n",
+    "**Replace the executable path from iOS \"resources/Sirius/sirius.app/Contents/MacOS/sirius\" to Linux \"resources/Sirius/sirius/bin/sirius\"**\n",
+    "\n",
     "#### `2) CSI:FingerID`\n",
     "\n",
     "The CSI_fingerID function is another algorithm from the Boecher lab, just like SIRIUS adapter and is using the formula predictions from SIRIUS, to search in structural libraries and predict the structure of each formula\n",
@@ -79,21 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7e793c80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Progress of 'mass trace detection':\n",
-      "-- done [took 0.29 s (CPU), 0.29 s (Wall)] -- \n",
-      "Progress of 'elution peak detection':\n",
-      "-- done [took 0.81 s (CPU), 0.82 s (Wall)] -- \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path= \"results/interim/sirius\"\n",
     "isExist= os.path.exists(path)\n",
@@ -226,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9f98622f",
    "metadata": {},
    "outputs": [],
@@ -251,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8d863b60",
    "metadata": {},
    "outputs": [],
@@ -275,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "261217e8-39a3-4ae4-9e22-18b110645b13",
    "metadata": {},
    "outputs": [],
@@ -311,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
