--- a/6_DataAnalysis.ipynb
+++ b/6_DataAnalysis.ipynb
@@ -1779,7 +1779,7 @@
    "source": [
     "DF_SIRIUS=[]\n",
     "for csv in input_formulas:\n",
-    "    df= pd.read_csv(csv, sep=\"\\t\")\n",
+    "    df= pd.read_csv(csv, sep=\",\")\n",
     "    df= df.loc[df[\"opt_global_rank\"]==1]\n",
     "    df_score=df.filter(regex=fr\"Score\")\n",
     "    df_opt=df.filter(regex=fr\"opt\")\n",
@@ -1790,7 +1790,7 @@
     "    df=df.reset_index()\n",
     "    DF_SIRIUS.append(df)\n",
     "\n",
-    "DF_SIRIUS=pd.concat(DF_SIRIUS, axis=1)\n",
+    "DF_SIRIUS=pd.concat(DF_SIRIUS, axis=0)\n",
     "DF_SIRIUS= df.drop(columns=\"index\")\n",
     "df_formulas= DF_SIRIUS.rename(columns= {\"chemical_formula\": \"formulas\", \"exp_mass_to_charge\": \"mz\", \"retention_time\": \"RT\"})\n",
     "df_formulas_helper= df_formulas.copy(deep=True)\n",
@@ -2028,7 +2028,7 @@
     "    df= df.drop(columns=\"index\")\n",
     "    CSI.append(df)\n",
     "\n",
-    "DF_CSI=pd.concat(CSI, axis=1)\n",
+    "DF_CSI=pd.concat(CSI, axis=0)\n",
     "\n",
     "df_structures = DF_CSI.drop_duplicates(subset=['inchi_key'], keep='first')\n",
     "df_structures= df_structures.drop(columns=[\"inchi_key\"]) #leave smiles for visualisationdf_structures= df_structures.rename(columns={\"chemical_formula\": \"formulas\", \"exp_mass_to_charge\": \"mz\", \"retention_time\": \"RT\"})\n",
