--- a/1_Preprocessing.ipynb
+++ b/1_Preprocessing.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# `Preprocessing workflow`\n",
     "\n",
-    "#### The preprocessing workflow consists of nine steps:"
+    "#### The preprocessing workflow consists of nine steps:\n",
+    "\n",
+    "![Preprocessing.png](images/Preprocessing.png)"
    ]
   },
   {
