--- a/3_GNPSExport.ipynb
+++ b/3_GNPSExport.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "This workflow consists of 4 steps that generate a directory with all the files necessary to create a FBMN job at GNPS. (see https://ccms-ucsd.github.io/GNPSDocumentation/featurebasedmolecularnetworking-with-openms/) \n",
     "\n",
-    "![2_GNPSExport.png](attachment:bd8eaba7-c1dc-4165-a5b3-cdc15d6e75c0.png)"
+    "![GNPSExport.png](images/GNPSExport.png)"
    ]
   },
   {
