--- a/4_Requantification.ipynb
+++ b/4_Requantification.ipynb
@@ -11,9 +11,9 @@
    "source": [
     "# `Re-quantification workflow`\n",
     "\n",
-    "This workflow consists of 3 steps. The purpose is missing value imputation caused by the preprocessing algorithms.\n",
+    "This workflow consists of 4 steps. The purpose is missing value imputation caused by the preprocessing algorithms.\n",
     "\n",
-    "![3_Re-quantification.png](attachment:7dff8437-3167-4d62-8bc4-552ec8b2db05.png)\n",
+    "![Re-quantification.png](images/Re-quantification.png)\n",
     "\n",
     "#### `1) Create a library (MetaboliteIdentification table)` \n",
     "\n",
@@ -826,7 +826,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `3) FeatureGroupingAlgorithmKD `\n",
+    "#### `4) FeatureGroupingAlgorithmKD `\n",
     "\n",
     "Feature linker aggregates the feature information (from single files) into a ConsensusFeature, linking features from different files together, which have a smiliar m/z and rt (no MS2 data).\n",
     "\n",
