--- a/2_SIRIUS_CSI.ipynb
+++ b/2_SIRIUS_CSI.ipynb
@@ -34,7 +34,6 @@
     "import glob\n",
     "import sys\n",
     "import pandas as pd\n",
-    "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *"
    ]
   },
@@ -92,7 +91,7 @@
     "    os.mkdir(path)\n",
     "\n",
     "\n",
-    "input_mzml_files = glob.glob('results/interim/PCpeak_*.mzML')\n",
+    "input_mzml_files = glob.glob('results/interim/mzML/PCpeak_*.mzML')\n",
     "\n",
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
