--- a/3_GNPSExport.ipynb
+++ b/3_GNPSExport.ipynb
@@ -26,7 +26,6 @@
     "import glob\n",
     "import sys\n",
     "import pandas as pd\n",
-    "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *"
    ]
   },
@@ -64,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!(cd results/interim/ && ls PCfeature_*.mzML > filelist.txt)"
+    "!(cd results/interim/mzML/ && ls PCfeature_*.mzML > filelist.txt)"
    ]
   },
   {
@@ -339,7 +338,7 @@
    "outputs": [],
    "source": [
     "consensus= \"results/interim/GNPSexport/filtered.consensusXML\"\n",
-    "input_mzml_files=sorted(glob.glob(\"results/interim/PCfeature_*.mzML\"))\n",
+    "input_mzml_files=sorted(glob.glob(\"results/interim/mzML/PCfeature_*.mzML\"))\n",
     "out_file= \"results/GNPSexport/MSMS.mgf\"\n",
     "\n",
     "#param= \"resources/GNPSExport.ini\"\n",
