GNPSMGF pyopenms final

--- a/3_GNPSExport.ipynb
+++ b/3_GNPSExport.ipynb
@@ -341,34 +341,12 @@
     "input_mzml_files=sorted(glob.glob(\"results/interim/mzML/PCfeature_*.mzML\"))\n",
     "out_file= \"results/GNPSexport/MSMS.mgf\"\n",
     "\n",
-    "#param= \"resources/GNPSExport.ini\"\n",
-    "\n",
     "spectra_clustering= GNPSMGFFile()\n",
     "cluster= spectra_clustering.getDefaults()\n",
     "cluster.setValue(\"ms2_bin_size\", 0.019999999552965)\n",
     "spectra_clustering.setParameters(cluster)\n",
     "\n",
-    "spectra_clustering.run(String(consensus), [b\"input_mzml_files\"], String(out_file))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Parameters file version (2.4.0-develop-2019-02-11) does not match the version of this tool (2.7.0).\n",
-      "Your current parameters are still valid, but there might be new valid values or even new parameters. Upgrading the INI might be useful.\n",
-      "Progress of 'parsing features and ms2 identifications...':\n",
-      "  0.02 %               libc++abi: terminating with uncaught exception of type std::length_error: vector\n"
-     ]
-    }
-   ],
-   "source": [
-    "!resources/OpenMS-2.7.0/bin/GNPSExport -ini resources/GNPSExport.ini -in_cm results/interim/GNPSexport/filtered.consensusXML -in_mzml results/GNPSexport/*.mzML -out results/GNPSexport/MSMS.mgf"
+    "spectra_clustering.run(String(consensus),[s.encode() for s in input_mzml_files], String(out_file))"
    ]
   },
   {
